@@ -13,6 +13,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- <versions.jacoco>0.7.6.201602180812</versions.jacoco> -->
         <learner.akka.version>2.5.19</learner.akka.version>
+        <mockito.core.version>2.22.0</mockito.core.version>
+        <powermock.api.mockito2.version>2.0.7</powermock.api.mockito2.version>
+        <powermock.module.junit4.version>2.0.0-beta.5</powermock.module.junit4.version>
     </properties>
 
     <dependencies>
@@ -175,19 +178,19 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.18.0</version>
+            <version>${mockito.core.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-mockito2</artifactId>
-            <version>2.0.0-beta.5</version>
+            <version>${powermock.api.mockito2.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-module-junit4</artifactId>
-            <version>2.0.0-beta.5</version>
+            <version>${powermock.module.junit4.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -290,6 +293,16 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
                     <version>2.17</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M4</version>
+                    <configuration>
+                        <argLine>
+                            --illegal-access=warn
+                        </argLine>
+                    </configuration>
                 </plugin>
 
             </plugins>
